# llm-compressor

./: .gitignore  CLAUDE.md  Makefile  README.md  cli.py  langfuse_tracer.py  langsmith_tracer.py  llmlingua_proxy.py  proxy.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-17-kompress-sqlite-dashboard.md  2026-06-19-session-tracker.md
docs/superpowers/specs/: 2026-06-17-kompress-sqlite-dashboard.md  2026-06-19-session-tracker-design.md
hooks/: rtk-post-log.sh
templates/: dashboard.html  list.html  play.html
tests/: conftest.py  test_cache.py  test_cli.py  test_coverage.py  test_langfuse_tracer.py  test_langsmith_tracer.py  test_makefile_lifecycle.py  test_proxy.py  test_tracker.py
