[project]
name = "llm-lingua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "huggingface_hub>=0.23.0",
"llmlingua>=0.2.2",
    "safetensors>=0.4.0",
    "torch>=2.11.0",
    "transformers>=4.40.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]
